--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ p {
     margin-top: 48px;
     margin-bottom: 55px;
     width: 493px;
-    color: #4B505A;
+    color: #4b505a;
     font-size: 18px;
     font-weight: 400;
     line-height: 33px;
